<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.optisoltask.viewmodel.RoomCreateBottomSheetDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryVariant">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_room_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="?colorOnPrimary"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLength="20"
            android:clickable="@{viewModel.isRoomEditable}"
            android:focusable="@{viewModel.isRoomEditable}"
            android:text="@={viewModel.roomsModel.roomName}"
            style="@style/EditText.OutLined.Background"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxIsLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtRoomName"
            app:layout_constraintStart_toStartOf="@id/edtRoomName"
            android:checked="@={viewModel.roomsModel.checked}"
            android:buttonTint="?colorPrimary"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleIsLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isLive"
            app:layout_constraintTop_toTopOf="@id/checkboxIsLive"
            app:layout_constraintBottom_toBottomOf="@id/checkboxIsLive"
            app:layout_constraintStart_toEndOf="@id/checkboxIsLive"
            android:textColor="?colorOnPrimary"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/create"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/_16dp"
            app:backgroundTint="?colorSecondary"
            android:textColor="?colorPrimaryVariant"
            android:layout_margin="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@id/checkboxIsLive"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/btnCreate"
            app:layout_constraintTop_toTopOf="@id/btnCreate"
            app:layout_constraintBottom_toBottomOf="@id/btnCreate"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/_16dp"
            android:textAllCaps="false"
            app:backgroundTint="?colorPrimary"
            android:textColor="?colorPrimaryVariant"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>